# proto/gen/rill/runtime/v1/resources.pb.validate.go
@@ -3397,6 +3397,40 @@ func (m *MetricsViewSpec) validate(all bool) error {
 
 	// no validation rules for CacheKeyTtlSeconds
 
+	for idx, item := range m.GetScenarios() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, MetricsViewSpecValidationError{
+						field:  fmt.Sprintf("Scenarios[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, MetricsViewSpecValidationError{
+						field:  fmt.Sprintf("Scenarios[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return MetricsViewSpecValidationError{
+					field:  fmt.Sprintf("Scenarios[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
 	if m.CacheEnabled != nil {
 		// no validation rules for CacheEnabled
 	}
@@ -13058,6 +13092,8 @@ func (m *MetricsViewSpec_Measure) validate(all bool) error {
 		}
 	}
 
+	// no validation rules for ScenarioExpressions
+
 	if len(errors) > 0 {
 		return MetricsViewSpec_MeasureMultiError(errors)
 	}
@@ -13137,6 +13173,112 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = MetricsViewSpec_MeasureValidationError{}
+
+// Validate checks the field values on MetricsViewSpec_Scenario with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *MetricsViewSpec_Scenario) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on MetricsViewSpec_Scenario with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// MetricsViewSpec_ScenarioMultiError, or nil if none found.
+func (m *MetricsViewSpec_Scenario) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *MetricsViewSpec_Scenario) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Name
+
+	// no validation rules for Label
+
+	if len(errors) > 0 {
+		return MetricsViewSpec_ScenarioMultiError(errors)
+	}
+
+	return nil
+}
+
+// MetricsViewSpec_ScenarioMultiError is an error wrapping multiple validation
+// errors returned by MetricsViewSpec_Scenario.ValidateAll() if the designated
+// constraints aren't met.
+type MetricsViewSpec_ScenarioMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m MetricsViewSpec_ScenarioMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m MetricsViewSpec_ScenarioMultiError) AllErrors() []error { return m }
+
+// MetricsViewSpec_ScenarioValidationError is the validation error returned by
+// MetricsViewSpec_Scenario.Validate if the designated constraints aren't met.
+type MetricsViewSpec_ScenarioValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e MetricsViewSpec_ScenarioValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e MetricsViewSpec_ScenarioValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e MetricsViewSpec_ScenarioValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e MetricsViewSpec_ScenarioValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e MetricsViewSpec_ScenarioValidationError) ErrorName() string {
+	return "MetricsViewSpec_ScenarioValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e MetricsViewSpec_ScenarioValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sMetricsViewSpec_Scenario.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = MetricsViewSpec_ScenarioValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = MetricsViewSpec_ScenarioValidationError{}
 
 // Validate checks the field values on MetricsViewSpec_Annotation with the
 // rules defined in the proto definition for this message. If any rules are
